added troop store link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         <span onclick="openNav()">&#9776; Menu</span>
       </div>
     </section>
+    <section class="store">
+      <div class="troop-store">
+        <img id="logo" src="./assets/images/TROOP_586_FRONT_SHIRT.png" alt="troop 586 logo">
+        <p id="text">Troop families our spirit store is open for orders. The store will remain open until March 10th and all orders will be picked up at the same time.</p>
+        <img id="soup" src="./assets/images/TROOP_586_BACK_SHIRT.png" alt="Soup The Turtle">
+      </div>
+      <div class="store-link">
+        <a href="https://stores.inksoft.com/troop_586/shop/home">Click here to visit the store</a>
+      </div>
+    </section>
     <section class="mumfest">
       <div>
         <img src="./assets/images/events/mum.jpg" alt="Mum Festival">
