changed troop store

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
     </section>
     <section class="store">
       <div class="troop-store">
-        <img id="logo" src="./assets/images/TROOP_586_FRONT_SHIRT.png" alt="troop 586 logo">
+        <div>
+          <img id="logo" src="./assets/images/troop-store1.PNG" alt="troop 586 shirt with logo">
+          <img id="soup" src="./assets/images/troop-store2.PNG" alt="troop shirt with Soup The Turtle">
+        </div>
         <p id="text">Troop families our spirit store is open for orders. The store will remain open until March 10th and all orders will be picked up at the same time.</p>
-        <img id="soup" src="./assets/images/TROOP_586_BACK_SHIRT.png" alt="Soup The Turtle">
+        <img id="hat" src="./assets/images/troop-store3.PNG" alt="troop hat with logo">
       </div>
       <div class="store-link">
         <a href="https://stores.inksoft.com/troop_586/shop/home">Click here to visit the store</a>
