changed background of eagle-oath.jpg

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -56,7 +56,7 @@
       <h2 class="section-title">Eagle Scouts</h2>
     </section>
     <section class="eagle-oath">
-      <img src="./assets/images/eagle-oath.JPG" alt="eagle scout oath">
+      <img src="./assets/images/eagle-oath1.jpg" alt="eagle scout oath">
     </section>
     <section class="eagle-scouts">
       <div>
