--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <img id="logo" src="./assets/images/troop-store1.PNG" alt="troop 586 shirt with logo">
           <img id="soup" src="./assets/images/troop-store2.PNG" alt="troop shirt with Soup The Turtle">
         </div>
-        <p id="text">Troop families our spirit store is open for orders. The store will remain open until March 10th and all orders will be picked up at the same time.</p>
+        <p id="text">Troop families, our spirit store is open for orders. The store will remain open until March 10th and all orders will be picked up at the same time.</p>
         <img id="hat" src="./assets/images/troop-store3.PNG" alt="troop hat with logo">
       </div>
       <div class="store-link">
