created newsletter page

--- a/newsletter.html
+++ b/newsletter.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
-      <link rel="stylesheet" href="./assets/css/style.css">
-      <link rel="stylesheet" href="./assets/css/mum-festival-style.css">
-      <title>Mum Festival</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/documents-style.css">
+    <title>Newsletter</title>
   </head>
   <body>
     <header>            
@@ -52,7 +52,33 @@
       </div>
     </section>
     <section class="title">
-      <h2 class="section-title">Mum Festival</h2>
+      <h2 class="section-title">Newsletter</h2>
+    </section>
+    <section class="newsletter">
+      <div class="news">
+        <h2>January 2023</h2>
+        <a href="newsletter.html">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-jan2023.PNG" alt="January 2023 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
+        <h2>December 2022</h2>
+        <a href="https://drive.google.com/file/d/1tqTxGRwaPbjw1U9ot9w9jFTzJyMV-wGy/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-dec2022.PNG" alt="December 2022 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
+        <h2>November 2022</h2>
+        <a href="https://drive.google.com/file/d/1bcTjsi4QYltEjCA6PXUOQGRlvY-_3cmm/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-nov2022.PNG" alt="November 2022 Newsletter">
+          </div>
+        </a>
+      </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
