link for january newsletter

--- a/newsletter.html
+++ b/newsletter.html
@@ -57,7 +57,7 @@
     <section class="newsletter">
       <div class="news">
         <h2>January 2023</h2>
-        <a href="newsletter.html">
+        <a href="https://drive.google.com/file/d/1-T4VYzRskEYDcCnH3qQZ-bimpeKO4oOR/view?usp=sharing">
           <div class="newsImg">
             <img src="./assets/images/newsletter/news-jan2023.PNG" alt="January 2023 Newsletter">
           </div>
