--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -88,6 +88,7 @@
       <div>
         <h3>2006</h3>
         <p>Evan English</p>
+        <p>Graham Long<p>
       </div>
       <div>
         <h3>2007</h3>
