--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
     <section>
       <div class="troop-photo">
-          <img src="./assets/images/troop-1280.jpg" alt="">
+          <img src="./assets/images/16538F59-09D0-4043-8C8A-73CDD3519AC0.jpeg" alt="troop photo">
       </div>
     </section>
     <section class="hero">
