added photos for caving

--- a/events.html
+++ b/events.html
@@ -104,7 +104,7 @@
           <h3>February</h3>
           <h4>Caving/Marengo Caves</h4>
           <p>The Caving event will be held at Marengo Caves in Marengo, IN. Scouts will be camping in cabins and exploring the "wild" cave filled with mud, water, tight spaces, and all the adventure they can handle.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(MC23)">Click here to see photos</a>
         </div>
         <a href="https://marengocave.com/">
           <div class="eventImg">
