--- a/photos.html
+++ b/photos.html
@@ -62,6 +62,7 @@
         <a href="#gallery" onclick="renderPhotos(rlfa23)">Real Life First Aid</a>
         <a href="#gallery" onclick="renderPhotos(CO28523)">Pack 285 Crossover</a>
         <a href="#gallery" onclick="renderPhotos(SS23)">Scout Sunday</a>
+        <a href="#gallery" onclick="renderPhotos(MC23)">Marengo Caves</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
