new parent orientation video

--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -28,7 +28,7 @@
         <a href="events.html">Events</a>           
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
-        <a href="troop-forms.html">Troop Forms</a>
+        <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
@@ -41,7 +41,7 @@
         <a href="events.html">Events</a>           
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
-        <a href="troop-forms.html">Troop Forms</a>
+        <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
