--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/documents-style.css">
-    <title>Troop Forms</title>
+    <title>Resources</title>
   </head>
   <body>
     <header>            
@@ -29,7 +29,7 @@
         <a href="events.html">Events</a>           
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
-        <a href="troop-forms.html">Troop Forms</a>
+        <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
@@ -42,7 +42,7 @@
         <a href="events.html">Events</a>           
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
-        <a href="troop-forms.html">Troop Forms</a>
+        <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
@@ -69,6 +69,18 @@
           <a href="./assets/docs/meal-planner.pdf">Meal Planner</a>
           <a href="./assets/docs/parol_box_checklist.pdf">Patrol Box Checklist</a>
           <a href="./assets/docs/Scoutmaster-Conference-Preparation.pdf">Scoutmaster Conference Sheet</a>
+        </div>
+      </div>
+    </section>
+    <section class="title">
+      <h2 class="section-title">Parent Resources</h2>
+    </section>
+    <section class="container">
+      <div class="resources">
+        <div class="forms">
+          <a href="https://drive.google.com/file/d/1euVprqR3a7KOF-Wm5w6cqxai4IZRbVkf/view?usp=sharing">
+            <img src="./assets/images/orientation.PNG" alt="new parent orientation video">
+          </a>
         </div>
       </div>
     </section>
