added photos for scouting for food

--- a/events.html
+++ b/events.html
@@ -116,8 +116,8 @@
         <div class="content">
           <h3>March</h3>
           <h4>Scouting for Food/Tipp City</h4>
-          <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected lbs of food for Needy Baskets food pantry.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected 3157lbs of food for Needy Baskets food pantry.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2(SFF23)">Click here to see photos</a>
         </div>
         <a href="https://miamivalleybsa.org/program/scouting-for-food/">
           <div class="eventImg">
