--- a/photos.html
+++ b/photos.html
@@ -63,6 +63,7 @@
         <a href="#gallery" onclick="renderPhotos(CO28523)">Pack 285 Crossover</a>
         <a href="#gallery" onclick="renderPhotos(SS23)">Scout Sunday</a>
         <a href="#gallery" onclick="renderPhotos(MC23)">Marengo Caves</a>
+        <a href="#gallery" onclick="renderPhotos(SFF23)">Scouting For Food</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
