--- a/newsletter.html
+++ b/newsletter.html
@@ -56,6 +56,14 @@
     </section>
     <section class="newsletter">
       <div class="news">
+        <h2>March 2023</h2>
+        <a href="https://drive.google.com/file/d/1i1QNptGkARioaCNnWfUlwb1dyWrE6EX_/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-mar2023.PNG" alt="March 2023 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
         <h2>February 2023</h2>
         <a href="https://drive.google.com/file/d/1wX-7LGvOLEfBnp6bbpvoTTYknV_hI-y2/view?usp=sharing">
           <div class="newsImg">
