venue change for may campout

--- a/events.html
+++ b/events.html
@@ -141,8 +141,8 @@
       <div class="left">
         <div class="content">
           <h3>May</h3>
-          <h4>Wilderness Survival/Cricket Holler</h4>
-          <p>Wilderness Survival will be held at Cricket Holler Scout Camp in Dayton, OH. The scouts will learn how to survive in the wilderness with only the things around them. They will build there own shelter and sleep in that shelter one night.</p>
+          <h4>Wilderness Survival/Camp Birch</h4>
+          <p>Wilderness Survival will be held at Camp Birch Scout Camp in Dayton, OH. The scouts will learn how to survive in the wilderness with only the things around them. They will build there own shelter and sleep in that shelter one night.</p>
           <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
         </div>
         <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
