--- a/events.html
+++ b/events.html
@@ -145,9 +145,9 @@
           <p>Wilderness Survival will be held at Camp Birch Scout Camp in Dayton, OH. The scouts will learn how to survive in the wilderness with only the things around them. They will build there own shelter and sleep in that shelter one night.</p>
           <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
         </div>
-        <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
+        <a href="http://tecumsehcouncilbsa.org/Camping/CampBirch/">
           <div class="eventImg">
-            <img src="./assets/images/events/cricket-holler.png" alt="cricket holler">
+            <img src="./assets/images/events/Camp-Birch.jpg" alt="cricket holler">
           </div>
         </a>
       </div>
