photos for backpacking campout

--- a/events.html
+++ b/events.html
@@ -130,7 +130,7 @@
           <h3>April</h3>
           <h4>Backpacking/Camp Birch</h4>
           <p>The Backpacking event will be held at Camp Hugh Taylor Birch Scout Camp in Yellow Springs, OH. The scouts will go on a 6 - 8 mile hike at adjoining John Bryan State Park. This hike is done wearing full backpack.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(BP23)">Click here to see photos</a>
         </div>
         <a href="http://tecumsehcouncilbsa.org/Camping/CampBirch/">
           <div class="eventImg">
