added girl troop recruitment flier

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <span onclick="openNav()">&#9776; Menu</span>
       </div>
     </section>
+    <section>
+      <div class="girl-troop">
+        <img src="./assets/images/girl-troop.JPG" alt="Girl Troop information meeting">
+      </div>
+    </section>
     <section class="store">
       <div class="troop-store">
         <div>
