wilderness survival photos

--- a/events.html
+++ b/events.html
@@ -143,7 +143,7 @@
           <h3>May</h3>
           <h4>Wilderness Survival/Camp Birch</h4>
           <p>Wilderness Survival will be held at Camp Birch Scout Camp in Dayton, OH. The scouts will learn how to survive in the wilderness with only the things around them. They will build there own shelter and sleep in that shelter one night.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(WS23)">Click here to see photos</a>
         </div>
         <a href="http://tecumsehcouncilbsa.org/Camping/CampBirch/">
           <div class="eventImg">
