--- a/photos.html
+++ b/photos.html
@@ -65,6 +65,7 @@
         <a href="#gallery" onclick="renderPhotos(MC23)">Marengo Caves</a>
         <a href="#gallery" onclick="renderPhotos(SFF23)">Scouting For Food</a>
         <a href="#gallery" onclick="renderPhotos(BP23)">Backpacking</a>
+        <a href="#gallery" onclick="renderPhotos(WS23)">Wilderness Survival</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
