memorial day photos

--- a/events.html
+++ b/events.html
@@ -156,7 +156,7 @@
           <h3>May</h3>
           <h4>Memorial Day Weekend/Tipp City</h4>
           <p>On Saturday the scouts place flags on the graves of veterans at Maple Hill Cemetery. On Monday the scouts participate in the Memorial Day parade.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(MD23)">Click here to see photos</a>
         </div>
         <a href="https://www.pbs.org/national-memorial-day-concert/memorial-day/history/">
           <div class="eventImg memorial">
