--- a/photos.html
+++ b/photos.html
@@ -66,6 +66,7 @@
         <a href="#gallery" onclick="renderPhotos(SFF23)">Scouting For Food</a>
         <a href="#gallery" onclick="renderPhotos(BP23)">Backpacking</a>
         <a href="#gallery" onclick="renderPhotos(WS23)">Wilderness Survival</a>
+        <a href="#gallery" onclick="renderPhotos(MD23)">Memorial Day</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
