--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
     <section>
       <div class="troop-photo">
-          <img src="./assets/images/Caving23/cave1.jpeg" alt="troop photo">
+          <img src="./assets/images/troop-photo-2023.jpg" alt="troop photo">
       </div>
     </section>
     <section class="hero">
