--- a/photos.html
+++ b/photos.html
@@ -67,6 +67,12 @@
         <a href="#gallery" onclick="renderPhotos(BP23)">Backpacking</a>
         <a href="#gallery" onclick="renderPhotos(WS23)">Wilderness Survival</a>
         <a href="#gallery" onclick="renderPhotos(MD23)">Memorial Day</a>
+        <a href="#gallery" onclick="renderPhotos(SCD0)">Summer Camp Day 0</a>
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD1)">Summer Camp Day 1</a> -->
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD2)">Summer Camp Day 2</a> -->
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD3)">Summer Camp Day 3</a> -->
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD4)">Summer Camp Day 4</a> -->
+        <!-- <a href="#gallery" onclick="renderPhotos(SCD5)">Summer Camp Day 5</a> -->
       </div>
     <section class="year">
       <h2>Year 2022</h2>
