summer camp day 1 photos added

--- a/photos.html
+++ b/photos.html
@@ -68,7 +68,7 @@
         <a href="#gallery" onclick="renderPhotos(WS23)">Wilderness Survival</a>
         <a href="#gallery" onclick="renderPhotos(MD23)">Memorial Day</a>
         <a href="#gallery" onclick="renderPhotos(SCD0)">Summer Camp Day 0</a>
-        <!-- <a href="#gallery" onclick="renderPhotos(SCD1)">Summer Camp Day 1</a> -->
+        <a href="#gallery" onclick="renderPhotos(SCD1)">Summer Camp Day 1</a>
         <!-- <a href="#gallery" onclick="renderPhotos(SCD2)">Summer Camp Day 2</a> -->
         <!-- <a href="#gallery" onclick="renderPhotos(SCD3)">Summer Camp Day 3</a> -->
         <!-- <a href="#gallery" onclick="renderPhotos(SCD4)">Summer Camp Day 4</a> -->
