day 2 photos added

--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
       </div>
     </section>
     <section>
+      <div class="leader">
+        <h2>Some things at summer camp never change</h2>
+      </div>
+      <div class="leadership">
+        <img src="./assets/images/Summer_Camp22/summer45.JPG" alt="napping leader">
+        <img src="./assets/images/Summer_Camp23/Day2/Day2_5.jpg" alt="napping leader">
+      </div>
+    </section>
+    <section>
       <div class="troop-photo">
           <img src="./assets/images/troop-photo-2023.jpg" alt="troop photo">
       </div>
