--- a/events.html
+++ b/events.html
@@ -172,7 +172,7 @@
           <a href="#gallery2" onclick="renderEventPhotos2(SCD0)">Click Here For Day 0 photos</a>
           <a href="#gallery2" onclick="renderEventPhotos2(SCD1)">Click Here For Day 1 photos</a>
           <a href="#gallery2" onclick="renderEventPhotos2(SCD2)">Click Here For Day 2 photos</a>
-          <!-- <a href="#gallery2" onclick="renderEventPhotos2(SCD3)">Click Here For Day 3 photos</a> -->
+          <a href="#gallery2" onclick="renderEventPhotos2(SCD3)">Click Here For Day 3 photos</a>
           <!-- <a href="#gallery2" onclick="renderEventPhotos2(SCD4)">Click Here For Day 4 photos</a> -->
           <!-- <a href="#gallery2" onclick="renderEventPhotos2(SCD5)">Click Here For Day 5 photos</a> -->
         </div>
