added summer camp day 4 photos

--- a/photos.html
+++ b/photos.html
@@ -71,7 +71,7 @@
         <a href="#gallery" onclick="renderPhotos(SCD1)">Summer Camp Day 1</a>
         <a href="#gallery" onclick="renderPhotos(SCD2)">Summer Camp Day 2</a>
         <a href="#gallery" onclick="renderPhotos(SCD3)">Summer Camp Day 3</a>
-        <!-- <a href="#gallery" onclick="renderPhotos(SCD4)">Summer Camp Day 4</a> -->
+        <a href="#gallery" onclick="renderPhotos(SCD4)">Summer Camp Day 4</a>
         <!-- <a href="#gallery" onclick="renderPhotos(SCD5)">Summer Camp Day 5</a> -->
       </div>
     <section class="year">
