added day 5 photos

--- a/events.html
+++ b/events.html
@@ -174,7 +174,7 @@
           <a href="#gallery2" onclick="renderEventPhotos2(SCD2)">Click Here For Day 2 photos</a>
           <a href="#gallery2" onclick="renderEventPhotos2(SCD3)">Click Here For Day 3 photos</a>
           <a href="#gallery2" onclick="renderEventPhotos2(SCD4)">Click Here For Day 4 photos</a>
-          <!-- <a href="#gallery2" onclick="renderEventPhotos2(SCD5)">Click Here For Day 5 photos</a> -->
+          <a href="#gallery2" onclick="renderEventPhotos2(SCD5)">Click Here For Day 5 photos</a>
         </div>
         <a href="http://www.blackswampbsa.org/camping/camp-berry/63302">
           <div class="eventImg">
