--- a/index.html
+++ b/index.html
@@ -91,12 +91,16 @@
         <a class="button-new" href="https://tippmumfestival.org/adopt-a-mum-payment-form/">NEW! Adopt-a-Mum ONLINE ORDER FORM</a>
       </div>
     </section>
-    <section>
+    <section class="box">
       <div class="leader">
         <h2>Some things at summer camp never change</h2>
       </div>
       <div class="leadership">
+        <h3>2022</h3>
         <img src="./assets/images/Summer_Camp22/summer45.JPG" alt="napping leader">
+      </div>
+      <div class="leadership">
+        <h3>2023</h3>
         <img src="./assets/images/Summer_Camp23/Day2/Day2_5.jpg" alt="napping leader">
       </div>
     </section>
