added Brighton's Eagle project phase 1

--- a/events.html
+++ b/events.html
@@ -184,6 +184,19 @@
       </div>
       <div class="right">
         <div class="content">
+          <h3>June</h3>
+          <h4>Brighton's Eagle Project Phase 1</h4>
+          <p>Brighton will be creating a retreat in the woods at Ginghamsburg Church for his Eagle project. For phase 1 of the project the trail was cut and cleared into the woods. Then rocks were dug up to line the creek and build a fire pit.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2(BEP23)">Click here to see photos</a>
+        </div>
+        <a href="https://ginghamsburg.org/plan-your-visit/tipp-city/">
+          <div class="eventImg">
+            <img src="./assets/images/BEP23/Phase1/Eagle6.jpg" alt="Eagle project group photo">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
           <h3>July</h3>
           <h4>Cycling/Hueston Woods</h4>
           <p>The Cycling main event is held at Hueston Woods State Park in Oxford, OH. The scouts go on a bike ride on the bike trails at the state park.</p>
@@ -195,7 +208,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>August</h3>
           <h4>Fishing/Chenoweth Trails</h4>
@@ -208,7 +221,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
@@ -221,7 +234,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>October</h3>
           <h4>Climbing-Indoors/TBD</h4>
@@ -234,7 +247,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
@@ -247,7 +260,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/TBD</h4>
