--- a/photos.html
+++ b/photos.html
@@ -73,6 +73,7 @@
         <a href="#gallery" onclick="renderPhotos(SCD3)">Summer Camp Day 3</a>
         <a href="#gallery" onclick="renderPhotos(SCD4)">Summer Camp Day 4</a>
         <a href="#gallery" onclick="renderPhotos(SCD5)">Summer Camp Day 5</a>
+        <a href="#gallery" onclick="renderPhotos(BEP23)">Brighton's Eagle Project Phase 1</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
