--- a/newsletter.html
+++ b/newsletter.html
@@ -56,6 +56,14 @@
     </section>
     <section class="newsletter">
       <div class="news">
+        <h2>May/June 2023</h2>
+        <a href="https://drive.google.com/file/d/1zetdlcSTJakpBbJ1r4HRe5McgKaDLFxr/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-may-june2023.PNG" alt="April 2023 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
         <h2>April 2023</h2>
         <a href="https://drive.google.com/file/d/15i5YqsMj4Vu94IkJyk-SC8ZROfzeMwig/view?usp=sharing">
           <div class="newsImg">
