added girl troop flyer

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </div>
     </section>
     <section>
-      <div class="girl-troop">
-        <img src="./assets/images/girl-troop.JPG" alt="Girl Troop information meeting">
+      <div class="troop-photo">
+        <img src="./assets/images/Girl_Troop2.jpg" alt="Girl Troop Flyer">
       </div>
     </section>
     <section class="store">
