--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -31,6 +31,7 @@
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
+        <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
       </div>
     </nav>
@@ -44,6 +45,7 @@
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
+        <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
       </div>
       <div id="main">
