--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
+        <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
       </div>
     </nav>
@@ -46,6 +47,7 @@
         <a href="resources.html">Resources</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="newsletter.html">Newsletter</a>
+        <a href="merit-badge-counselors.html">Merit Badge Counselors</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
       </div>
       <div id="main">
