--- a/merit-badge-counselors.html
+++ b/merit-badge-counselors.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/documents-style.css">
-    <title>Resources</title>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
+      <link rel="stylesheet" href="./assets/css/style.css">
+      <link rel="stylesheet" href="./assets/css/mum-festival-style.css">
+      <title>Merit Badge Counselors</title>
   </head>
   <body>
     <header>            
@@ -54,37 +54,7 @@
       </div>
     </section>
     <section class="title">
-      <h2 class="section-title">Troop Forms</h2>
-    </section>
-    <section class="container">
-      <div class="wrapper">
-        <div class="forms">
-          <h3>Troop Forms</h3>
-          <a href="./assets/docs/Reimbursement Request Form.pdf">Reimbursement Request Form</a>
-          <a href="./assets/docs/Medical_ABC.pdf">Medical Forms</a>
-          <a href="./assets/docs/Youth-Application.pdf">Youth Application</a>
-          <a href="./assets/docs/Adult-Application.pdf">Adult Application</a>
-        </div>
-        <div class="forms">
-          <h3>Scout Forms</h3>
-          <a href="./assets/docs/duty-roster.pdf">Duty Roster</a>
-          <a href="./assets/docs/meal-planner.pdf">Meal Planner</a>
-          <a href="./assets/docs/parol_box_checklist.pdf">Patrol Box Checklist</a>
-          <a href="./assets/docs/Scoutmaster-Conference-Preparation.pdf">Scoutmaster Conference Sheet</a>
-        </div>
-      </div>
-    </section>
-    <section class="title">
-      <h2 class="section-title">Parent Resources</h2>
-    </section>
-    <section class="container">
-      <div class="resources">
-        <div class="forms">
-          <a href="https://drive.google.com/file/d/1qZIEBQZW4dc4efW5Civk8ZF7PihGZAiY/view?usp=sharing">
-            <img src="./assets/images/orientation.PNG" alt="new parent orientation video">
-          </a>
-        </div>
-      </div>
+      <h2 class="section-title">Merit Badge Counselors</h2>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
