added merit badge counselors

--- a/merit-badge-counselors.html
+++ b/merit-badge-counselors.html
@@ -54,14 +54,64 @@
       </div>
     </section>
     <section class="title">
-      <h2 class="section-title">Merit Badge Counselors</h2>
+      <h2 class="section-title">Merit Badge Counselors of Troop 586</h2>
+    </section>
+    <section class="merit">
+      <div class="counselor">
+        <h3>Jim Ridgeway</h3>
+        <ul>
+          <li>Cooking</li>
+          <li>Wilderness Survival</li>
+          <li>Astronomy</li>
+          <li>Camping</li>
+          <li>Chemistry</li>
+          <li>Citizenship in Society</li>
+          <li>Composite Materials</li>
+          <li>Digital Tech</li>
+          <li>Emergency Preparedness</li>
+          <li>Environmental Science</li>
+          <li>First Aid</li>
+          <li>Fish and Wildlife</li>
+          <li>Fishing</li>
+          <li>Fly Fishing</li>
+          <li>Golf</li>
+          <li>Nuclear Science</li>
+          <li>Scout Heritage</li>
+          <li>Sustainability</li>
+        </ul>
+      </div>
+      <div class="counselor">
+        <h3>Andy Luersman</h3>
+        <ul>
+          <li>Cooking</li>
+          <li>Wilderness Survival</li>
+          <li>Communication</li>
+          <li>Digital Tech</li>
+          <li>Orienteering</li>
+          <li>Sports</li>
+          <li>Sustainability</li>
+          <li>Woodworking</li>
+        </ul>
+      </div>
+      <div class="counselor">
+        <h3>Glen Luersman</h3>
+        <ul>
+          <li>Automotive Maintenance</li>
+          <li>Disabilities Awareness</li>
+          <li>Family Life</li>
+          <li>Home Repairs</li>
+          <li>Traffic Safety</li>
+          <li>Truck Transportation</li>
+          <li>Woodworking</li>
+        </ul>
+      </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
-      <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
-      <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
-      <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
-      <p>Special thanks to <a href="https://miamicountyymca.net/">Miami County YMCA - Robinson Branch</a> for supporting our troop and allowing us to use their facilities.</p>
+      <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</li>
+      <li>&copy;Troop 586 Tipp City, Ohio 2022</li>
+      <li><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></li>
+      <li>Special thanks to <a href="https://miamicountyymca.net/">Miami County YMCA - Robinson Branch</a> for supporting our troop and allowing us to use their facilities.</li>
     </footer>
     <script src="./assets/js/script.js"></script>
   </body>
