new troop flyer

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </div>
     </section>
     <section>
-      <div class="troop-photo">
-        <img src="./assets/images/Girl_Troop2.jpg" alt="Girl Troop Flyer">
+      <div class="troop-flyer">
+        <img src="./assets/images/Troop_586_flyer_soup.jpg" alt="Troop Flyer">
       </div>
     </section>
     <section class="store">
