added cycling photos

--- a/events.html
+++ b/events.html
@@ -202,7 +202,7 @@
           <h3>July</h3>
           <h4>Cycling/Hueston Woods</h4>
           <p>The Cycling main event is held at Hueston Woods State Park in Oxford, OH. The scouts go on a bike ride on the bike trails at the state park.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2(cme22)">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(C23)">Click here to see photos</a>
         </div>
         <a href="https://ohiodnr.gov/go-and-do/plan-a-visit/find-a-property/hueston-woods-state-park">
           <div class="eventImg">
