position changes and new link for applications

--- a/resources.html
+++ b/resources.html
@@ -62,8 +62,8 @@
           <h3>Troop Forms</h3>
           <a href="./assets/docs/Reimbursement Request Form.pdf">Reimbursement Request Form</a>
           <a href="./assets/docs/Medical_ABC.pdf">Medical Forms</a>
-          <a href="./assets/docs/Youth-Application.pdf">Youth Application</a>
-          <a href="./assets/docs/Adult-Application.pdf">Adult Application</a>
+          <a href="https://my.scouting.org/online-registration/26b25f61-fc8d-4936-8319-d7f5eeac0d68/applicant-type">Youth Application</a>
+          <a href="https://my.scouting.org/online-registration/26b25f61-fc8d-4936-8319-d7f5eeac0d68/applicant-type">Adult Application</a>
         </div>
         <div class="forms">
           <h3>Scout Forms</h3>
