--- a/resources.html
+++ b/resources.html
@@ -80,6 +80,15 @@
     <section class="container">
       <div class="resources">
         <div class="forms">
+          <a href="https://education.ohio.gov/Topics/Other-Resources/Scholarships/ACE/Ohio-ACE-How-to-Apply">
+            <img src="./assets/images/ACE_banner.png" alt="ACE Scholarship">
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="resources">
+        <div class="forms">
           <a href="https://drive.google.com/file/d/1qZIEBQZW4dc4efW5Civk8ZF7PihGZAiY/view?usp=sharing">
             <img src="./assets/images/orientation.PNG" alt="new parent orientation video">
           </a>
