--- a/newsletter.html
+++ b/newsletter.html
@@ -58,10 +58,18 @@
     </section>
     <section class="newsletter">
       <div class="news">
+        <h2>July 2023</h2>
+        <a href="https://drive.google.com/file/d/1nVcyFGlMGJ0K189gzQRtxT1MKDS4T8Lr/view?usp=sharing">
+          <div class="newsImg">
+            <img src="./assets/images/newsletter/news-july2023.PNG" alt="July 2023 Newsletter">
+          </div>
+        </a>
+      </div>
+      <div class="news">
         <h2>May/June 2023</h2>
         <a href="https://drive.google.com/file/d/1zetdlcSTJakpBbJ1r4HRe5McgKaDLFxr/view?usp=sharing">
           <div class="newsImg">
-            <img src="./assets/images/newsletter/news-may-june2023.PNG" alt="April 2023 Newsletter">
+            <img src="./assets/images/newsletter/news-may-june2023.PNG" alt="May/June 2023 Newsletter">
           </div>
         </a>
       </div>
