--- a/resources.html
+++ b/resources.html
@@ -89,6 +89,15 @@
     <section class="container">
       <div class="resources">
         <div class="forms">
+          <a href="https://www.youtube.com/watch?v=J2W5B1JcLLI">
+            <img src="./assets/images/patrol_method.jpg" alt="Patrol Method video">
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="resources">
+        <div class="forms">
           <a href="https://drive.google.com/file/d/1qZIEBQZW4dc4efW5Civk8ZF7PihGZAiY/view?usp=sharing">
             <img src="./assets/images/orientation.PNG" alt="new parent orientation video">
           </a>
