added photos for chenoweth and eagle court

--- a/events.html
+++ b/events.html
@@ -226,9 +226,22 @@
       <div class="left">
         <div class="content">
           <h3>August</h3>
+          <h4>Gavyn's Eagle Court of Honor</h4>
+          <p>This is a very special event where Gavyn was honored for his accomplishment of reaching the rank of Eagle Scout. It take a lot of hard work and dedication to earn the rank of Eagle Scout. We are all very proud of Gavyn for earning this high honor. Many stories were told and lots of laughs had. </p>
+          <a href="#gallery2" onclick="renderEventPhotos2(GEC23)">Click here to see photos</a>
+        </div>
+        <a href="https://ginghamsburg.org/plan-your-visit/tipp-city/?utm_source=Google&gclid=Cj0KCQjwl8anBhCFARIsAKbbpyR6RLJ-KTf0l8_W4dwLvoDZ68-FzgIoMs0AVfIMdcsYTns8Hp6bjIoaAn8oEALw_wcB">
+          <div class="eventImg">
+            <img src="./assets/images/events/the_ark.jpg" alt="The Ark">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>August</h3>
           <h4>Fishing/Chenoweth Trails</h4>
           <p>The Fishing main event is held at Chenoweth Trails in Greenville, OH. The scouts put all of their fishing knowledge to the test as they attempt to catch fish (everyone catches a fish at this pond).</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(CT23)">Click here to see photos</a>
         </div>
         <a href="https://www.mattlight72.com/about-chenoweth-trails/">
           <div class="eventImg">
@@ -236,7 +249,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
@@ -249,7 +262,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>October</h3>
           <h4>Climbing-Indoors/TBD</h4>
@@ -262,7 +275,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
@@ -275,7 +288,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/TBD</h4>
