--- a/photos.html
+++ b/photos.html
@@ -77,6 +77,9 @@
         <a href="#gallery" onclick="renderPhotos(SCD5)">Summer Camp Day 5</a>
         <a href="#gallery" onclick="renderPhotos(BEP23)">Brighton's Eagle Project Phase 1</a>
         <a href="#gallery" onclick="renderPhotos(C23)">Cycling</a>
+        <a href="#gallery" onclick="renderPhotos(GEC23)">Gavyn's Eagle Court of Honor</a>
+        <a href="#gallery" onclick="renderPhotos(CT23)">Fishing/Chenoweth Trails</a>
+
       </div>
     <section class="year">
       <h2>Year 2022</h2>
