added mum painting photos

--- a/events.html
+++ b/events.html
@@ -254,7 +254,7 @@
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
           <p>Mum Fest is the big fundraiser of the year for the scouts. Starting in August the scouts begin selling mums to be painted on driveways. September begins the painting all the way up to Mum Fest. At Mum Fest the scouts run a Cobbler Booth.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(Mum23)">Click here to see photos</a>
         </div>
         <a href="https://tippmumfestival.org/">
           <div class="eventImg">
