--- a/photos.html
+++ b/photos.html
@@ -79,7 +79,7 @@
         <a href="#gallery" onclick="renderPhotos(C23)">Cycling</a>
         <a href="#gallery" onclick="renderPhotos(GEC23)">Gavyn's Eagle Court of Honor</a>
         <a href="#gallery" onclick="renderPhotos(CT23)">Fishing/Chenoweth Trails</a>
-
+        <a href="#gallery" onclick="renderPhotos(Mum23)">Mum Festival</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
