--- a/events.html
+++ b/events.html
@@ -265,11 +265,11 @@
       <div class="right">
         <div class="content">
           <h3>October</h3>
-          <h4>Climbing-Indoors/TBD</h4>
-          <p>Location is yet to be determined for this event. Scouts will be learning climbing skills and putting them to use on an indoor climbing wall.</p>
+          <h4>Climbing-Indoors/Climb Cincy</h4>
+          <p>The climbing main event will be held at Climb Cincy. Scouts will be learning climbing skills and putting them to use on an indoor climbing wall.</p>
           <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
         </div>
-        <a href="">
+        <a href="https://www.climbcincy.com/">
           <div class="eventImg">
             <img src="./assets/images/events/climbing.jpg" alt="boy scouts of america">
           </div>
