added photos for Brighton's Eagle project and Mum painting

--- a/events.html
+++ b/events.html
@@ -252,6 +252,19 @@
       <div class="left">
         <div class="content">
           <h3>September</h3>
+          <h4>Brighton's Eagle Project Phase 2</h4>
+          <p>Brighton will be creating a retreat in the woods at Ginghamsburg Church for his Eagle project. For phase 2 of the project the remainder of the brush was cleared and firewood was stacked. A fire pit was constructed with rocks and 3 benches were constructed with materials that were gathered on site.</p>
+          <a href="#gallery2" onclick="renderEventPhotos2(BEP232)">Click here to see photos</a>
+        </div>
+        <a href="https://ginghamsburg.org/plan-your-visit/tipp-city/">
+          <div class="eventImg">
+            <img src="./assets/images/BEP23/Phase1/Eagle6.jpg" alt="Eagle project group photo">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
           <p>Mum Fest is the big fundraiser of the year for the scouts. Starting in August the scouts begin selling mums to be painted on driveways. September begins the painting all the way up to Mum Fest. At Mum Fest the scouts run a Cobbler Booth.</p>
           <a href="#gallery2" onclick="renderEventPhotos2(Mum23)">Click here to see photos</a>
@@ -262,7 +275,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>October</h3>
           <h4>Climbing-Indoors/Climb Cincy</h4>
@@ -275,7 +288,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
@@ -288,7 +301,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/TBD</h4>
