--- a/photos.html
+++ b/photos.html
@@ -79,6 +79,7 @@
         <a href="#gallery" onclick="renderPhotos(C23)">Cycling</a>
         <a href="#gallery" onclick="renderPhotos(GEC23)">Gavyn's Eagle Court of Honor</a>
         <a href="#gallery" onclick="renderPhotos(CT23)">Fishing/Chenoweth Trails</a>
+        <a href="#gallery" onclick="renderPhotos(BEP232)">Brighton's Eagle Project Phase 2</a>
         <a href="#gallery" onclick="renderPhotos(Mum23)">Mum Festival</a>
       </div>
     <section class="year">
