--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -165,6 +165,10 @@
         <h3>2022</h3>
         <p>Gavyn M.</p>
       </div>
+      <div>
+        <h3>2023</h3>
+        <p>Christian Hartman</p>
+      </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
