added photos for Climbing

--- a/events.html
+++ b/events.html
@@ -280,11 +280,11 @@
           <h3>October</h3>
           <h4>Climbing-Indoors/Climb Cincy</h4>
           <p>The climbing main event will be held at Climb Cincy. Scouts will be learning climbing skills and putting them to use on an indoor climbing wall.</p>
-          <a href="#gallery2" onclick="renderEventPhotos2()">Click here to see photos</a>
+          <a href="#gallery2" onclick="renderEventPhotos2(IC23)">Click here to see photos</a>
         </div>
         <a href="https://www.climbcincy.com/">
           <div class="eventImg">
-            <img src="./assets/images/events/climbing.jpg" alt="boy scouts of america">
+            <img src="./assets/images/events/climbing.jpg" alt="Climb Cincy">
           </div>
         </a>
       </div>
