--- a/photos.html
+++ b/photos.html
@@ -81,6 +81,7 @@
         <a href="#gallery" onclick="renderPhotos(CT23)">Fishing/Chenoweth Trails</a>
         <a href="#gallery" onclick="renderPhotos(BEP232)">Brighton's Eagle Project Phase 2</a>
         <a href="#gallery" onclick="renderPhotos(Mum23)">Mum Festival</a>
+        <a href="#gallery" onclick="renderPhotos(IC23)">Indoor Climbing</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
